[package]
name = "travels-task"
version = "0.1.0"
authors = ["Evgeniy Tatarkin <tatarkin.evg@gmail.com>"]

[dependencies]
env_logger = "0.4.3"

# serialize & deserialize
serde = "1.0.11"
serde_json = "1.0.2"
serde_derive = "1.0.11"

# concurrency
threadpool = "1.6.0"
lazy_static = "0.2.8"
num_cpus = "1.6.2"

# routing & filters
regex = "0.2.2"
urlencoding = "1.0.0"
chrono = "0.4.0"

# networking
futures = "0.1.14"
tokio-proto = "0.1.1"
tokio-service = "0.1.0"
tokio-minihttp = { path = "./tokio-minihttp" }
